# Rust-Parallel-Processing-HTTP-Request-Generator

./: .gitignore  Cargo.toml
src/: main.rs  test_data.json
