[package]
name = "http-request-generator"
version = "0.1.0"
authors = ["Brendan Dagys <brendandagys@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] } # JSON parsing support
futures = "0.3" # for our async / await blocks
tokio = { version = "1.12.0", features = ["full"] } # async runtime
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
